--- a/roles/flange_jbcs/tasks/ssl.yml
+++ b/roles/flange_jbcs/tasks/ssl.yml
@@ -1,27 +1,27 @@
 ---
-- assert:
+- ansible.builtin.assert:
     that:
       - httpd is defined
       - httpd.home is defined
     quiet: true
 
-- set_fact:
+- ansible.builtin.set_fact:
     ssl_conf: "{{ httpd.home }}/httpd/conf.d/ssl.conf"
 
-- set_fact:
+- ansible.builtin.set_fact:
     ssl_conf_disabled: "{{ ssl_conf }}.disabled"
 
-- stat:
+- ansible.builtin.stat:
     path: "{{ ssl_conf }}"
   register: ssl_conf_file
 
 - block:
-    - stat:
+    - ansible.builtin.stat:
         path: "{{ ssl_conf_disabled }}"
       register: ssl_conf_disabled_file
 
     - name: "Disabled SSL"
-      file:
+      ansible.builtin.file:
         src: "{{ ssl_conf }}"
         path: "{{ ssl_conf }}.disabled"
         state: hard
@@ -29,12 +29,12 @@
         - ssl_conf_file.stat.exists
         - not ssl_conf_disabled_file.stat.exists
 
-    - stat:
+    - ansible.builtin.stat:
         path: "{{ ssl_conf }}.disabled"
       register: ssl_conf_remove
 
     - name: "Remove old file"
-      file:
+      ansible.builtin.file:
         path: "{{ ssl_conf }}"
         state: absent
       when:
@@ -44,18 +44,18 @@
 
 - block:
     - name: "Ensures HTTPd SSL configuration is deployed"
-      template:
+      ansible.builtin.template:
         src: templates/ssl.conf.j2
         dest: "{{ ssl_conf }}"
       notify:
         - Restart JBCS
 
-    - stat:
+    - ansible.builtin.stat:
         path: "{{ ssl_conf_disabled }}"
       register: is_ssl_conf_disabled
 
     - name: "Remove disabled conf if exists"
-      file:
+      ansible.builtin.file:
         path: "{{ ssl_conf_disabled }}"
         state: absent
       when:
