--- a/roles/flange_wildfly/tasks/keycloak/keycloak-download.yml
+++ b/roles/flange_wildfly/tasks/keycloak/keycloak-download.yml
@@ -1,5 +1,5 @@
 ---
-- assert:
+- ansible.builtin.assert:
     that:
       - wildfly is defined
       - wildfly.home is defined
@@ -7,7 +7,7 @@
     quiet: true
 
 - name: Download Keycloak Adapter
-  unarchive:
+  ansible.builtin.unarchive:
     src: "{{ keycloak_download_url }}"
     dest: "{{ wildfly.home }}"
     remote_src: yes
