--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI
 "on":
   push:
     branches:
-      - master
+      - main
   pull_request:
   repository_dispatch:
 
@@ -23,15 +23,14 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Set up Python ${{ matrix.python_version }}
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python_version }}
       
       - name: Install yamllint, ansible and molecule
         run: |
           python -m pip install --upgrade pip
-          pip install ansible-base==2.10.17 yamllint 'molecule[docker]~=3.5.2' ansible-compat==2.0.2 ansible-core netaddr flake8 ansible-lint voluptuous
-          pip install -r requirements.txt
+          pip install yamllint 'molecule>=6.0.3' 'molecule-plugins[docker]>=23.5.3' ansible-core flake8 ansible-lint voluptuous
 
       - name: Create default collection path
         run: |
@@ -44,7 +43,9 @@ jobs:
           path: ansible_collections/ansible-lint-custom-rules/
 
       - name: Run molecule test
-        run: molecule test
+        run: |
+          ansible-galaxy collection install -r molecule/default/requirements.yml
+          molecule test
         env:
           PY_COLORS: "1"
           ANSIBLE_FORCE_COLOR: "1"
