--- a/playbooks/ping.yml
+++ b/playbooks/ping.yml
@@ -2,5 +2,5 @@
 - name: Playbook for EAP hosts
   hosts: all
   tasks:
-    - debug:
+    - ansible.builtin.debug:
         msg: "Ansible Ping on {{ ansible_nodename }}"
