--- a/playbooks/restart_all_wildfly_instances.yml
+++ b/playbooks/restart_all_wildfly_instances.yml
@@ -1,12 +1,13 @@
 ---
 - name: Playbook for Wildfly Hosts
   hosts: wildfly
+  become: true
   tasks:
 
-    - set_fact:
+    - ansible.builtin.set_fact:
         nb_instances: "{{ (nb_instance_by_node | default(2) ) }}"
 
     - name: Wildfly Role
-      include_role:
+      ansible.builtin.include_role:
         name: flange_wildfly
         tasks_from: restart_wfly_instance.yml
