--- a/playbooks/uninstall_all_wfly_instances.yml
+++ b/playbooks/uninstall_all_wfly_instances.yml
@@ -3,10 +3,10 @@
   hosts: wildfly
   tasks:
 
-    - set_fact:
+    - ansible.builtin.set_fact:
         nb_instances: "{{ (nb_instance_by_node | default(2) | int ) }}"
 
     - name: Wildfly Role
-      include_role:
+      ansible.builtin.include_role:
         name: flange_wildfly
         tasks_from: uninstall_wfly_instance.yml
