--- a/roles/flange_fastpackages/tasks/main.yml
+++ b/roles/flange_fastpackages/tasks/main.yml
@@ -1,17 +1,17 @@
 ---
-- set_fact:
+- ansible.builtin.set_fact:
     update_cache: true
     packages_to_install: []
 
 - name: "Check packages to be installed"
-  include_tasks: tasks/build-packages-list-to-install.yml
+  ansible.builtin.include_tasks: tasks/build-packages-list-to-install.yml
   loop: "{{ packages_list | flatten }}"
   loop_control:
     loop_var: package_name
 
 - name: "Install packages: {{ packages_to_install }}"
   become: yes
-  yum:
+  ansible.builtin.yum:
     name: "{{ packages_to_install }}"
     state: latest
   when: packages_to_install | length > 0
