--- a/roles/flange_jbcs/handlers/main.yml
+++ b/roles/flange_jbcs/handlers/main.yml
@@ -1,8 +1,8 @@
 ---
 - name: "Restart JBCS"
-  service:
+  ansible.builtin.service:
     name: jbcs-httpd24-httpd.service
     state: restarted
 
 - name: "expire mod_cluster cache and restart"
-  include_tasks: tasks/mod_cluster_cache_and_restart.yml
+  ansible.builtin.include_tasks: tasks/mod_cluster_cache_and_restart.yml
