--- a/roles/flange_jbcs/tasks/mod_cluster_cache_and_restart.yml
+++ b/roles/flange_jbcs/tasks/mod_cluster_cache_and_restart.yml
@@ -2,16 +2,20 @@
 - name: 'expire mod_cluster cache and restart'
   become: true
   block:
-    - assert:
+    - ansible.builtin.assert:
         that:
           - httpd is defined
           - httpd.home is defined
-    - service:
+          
+    - name: Stop jbcs-httpd24-httpd service
+      ansible.builtin.service:
         name: jbcs-httpd24-httpd.service
         state: stopped
 
-    - command: rm -rf {{ httpd.home }}/httpd/cache/mod_cluster/
+    - name: Modify the settings  
+      ansible.builtin.command: rm -rf {{ httpd.home }}/httpd/cache/mod_cluster/
     
-    - service:
+    - name: Start jbcs-httpd24-httpd service 
+      ansible.builtin.service:
         name: jbcs-httpd24-httpd.service
         state: started
