--- a/roles/flange_jbcs/tasks/prereqs.yml
+++ b/roles/flange_jbcs/tasks/prereqs.yml
@@ -1,6 +1,6 @@
 ---
 - name: "Ensures required packages are installed"
-  include_role:
+  ansible.builtin.include_role:
     name: flange_fastpackages
   vars:
     packages_list:
@@ -9,7 +9,8 @@
       - firewalld
 
 - name: "Ensure that firewalld service is running"
-  systemd:
+  become: yes
+  ansible.builtin.systemd:
     name: firewalld
     enabled: yes
     state: started
