--- a/roles/flange_keycloak/tasks/demo_urls_redirects/demo_app_urls.yml
+++ b/roles/flange_keycloak/tasks/demo_urls_redirects/demo_app_urls.yml
@@ -1,17 +1,17 @@
 ---
-- assert:
+- ansible.builtin.assert:
     that:
       - item is defined
       - app_servers_list is defined
     quiet: true
 
-- set_fact:
+- ansible.builtin.set_fact:
     app_list_by_instance: []
 
-- set_fact:
+- ansible.builtin.set_fact:
     url: "https://{{ item }}"
 
-- include_tasks: demo_app_all_urls_by_host.yml
+- ansible.builtin.include_tasks: demo_app_all_urls_by_host.yml
 
-- set_fact:
+- ansible.builtin.set_fact:
     app_servers_list: "{{ app_servers_list }} + {{ app_list_by_instance }}"
