--- a/roles/flange_keycloak/tasks/main.yml
+++ b/roles/flange_keycloak/tasks/main.yml
@@ -1,20 +1,20 @@
 ---
-- set_fact:
+- ansible.builtin.set_fact:
     demo_app_redirect_uris: []
     origin_host: localhost
 
 - name: Use loadbalancer as origin when defined
-  set_fact:
+  ansible.builtin.set_fact:
     origin_host: "{{ groups['jbcs'][0] }}"
   when: groups['jbcs'] is defined and groups['jbcs'][0]|length > 0
 
-- include_tasks: demo_urls_redirects/main.yml
+- ansible.builtin.include_tasks: demo_urls_redirects/main.yml
 
-- set_fact:
+- ansible.builtin.set_fact:
     keycloak_flange_client: "{{ keycloak_flange_client | combine ( { 'web_origins': demo_app_redirect_uris, 'redirect_uris': 'https://'+origin_host+demo_app_endpoint+'/*' } ) }}"
 
 - name: Create demo realm and client
-  include_role:
+  ansible.builtin.include_role:
     name: keycloak_realm
   vars:
     keycloak_realm: "{{ keycloak_flange_realm }}"
