--- a/roles/flange_postgresql/handlers/main.yml
+++ b/roles/flange_postgresql/handlers/main.yml
@@ -1,3 +1,3 @@
 ---
 - name: "restart postgres"
-  include_tasks: tasks/restart_postgres.yml
+  ansible.builtin.include_tasks: tasks/restart_postgres.yml
