--- a/roles/flange_wildfly/handlers/main.yml
+++ b/roles/flange_wildfly/handlers/main.yml
@@ -1,3 +1,3 @@
 ---
 - name: 'Restart Wildfly instances'
-  include: tasks/restart_wfly_instance.yml
+  ansible.builtin.include_tasks: tasks/restart_wfly_instance.yml
