--- a/roles/flange_wildfly/tasks/undeploy_apps.yml
+++ b/roles/flange_wildfly/tasks/undeploy_apps.yml
@@ -1,5 +1,5 @@
 ---
-- assert:
+- ansible.builtin.assert:
     that:
       - wildfly is defined
       - wildfly.home is defined
@@ -7,10 +7,10 @@
       - app_name is defined
     quiet: true
 
-- debug:
+- ansible.builtin.debug:
     msg: "nb_instance:{{ nb_instance_by_node }}"
 
-- include_tasks: undeploy_app.yml
+- ansible.builtin.include_tasks: undeploy_app.yml
   loop: "{{ range(1, (nb_instance_by_node|int + 1)) | list }}"
   loop_control:
     loop_var: item
