--- a/roles/flange_wildfly/tasks/uninstall_wfly_instance.yml
+++ b/roles/flange_wildfly/tasks/uninstall_wfly_instance.yml
@@ -1,5 +1,5 @@
 ---
-- assert:
+- ansible.builtin.assert:
     that:
       - wildfly is defined
       - wildfly.config is defined
@@ -10,18 +10,18 @@
     quiet: true
 
 - name: 'Stop all Wildfly instances'
-  include_tasks: uninstall/stop_service.yml
+  ansible.builtin.include_tasks: uninstall/stop_service.yml
   loop: "{{ range(1, (nb_instances|int + 1)) | list }}"
 
 - name: "Delete all runtime and configuration files"
-  include_tasks: uninstall/delete_files.yml
+  ansible.builtin.include_tasks: uninstall/delete_files.yml
   loop: "{{ range(1, (nb_instances|int + 1)) | list }}"
 
 - name: "Perform daemon-reload to ensure all services are removed"
-  systemd:
+  ansible.builtin.systemd:
     daemon_reload: yes
 
 - name: "Uninstall Wildfly binaries"
-  file:
+  ansible.builtin.file:
     state: absent
     path: "{{ wildfly.home }}"
