Incr app download timeout to avoid CI fails

--- a/roles/flange_wildfly/tasks/app_download.yml
+++ b/roles/flange_wildfly/tasks/app_download.yml
@@ -14,6 +14,7 @@
   ansible.builtin.get_url:
     url: "{{ app_detail.url }}"
     dest: "{{ app_dest }}"
+    timeout: 60
   when:
     - app_dest_path is defined
     - app_dest_path.stat is defined
